[LD] First Traps Added to "Rum on Rocks"!
The Frightening Debut of the KILLER RAKE

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,6 +78,8 @@ LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/(PRG)Everyone/KillerRake.KillerRake
+OpenAssetsAtExit=/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -135,7 +137,7 @@ MRUItem7=/Game/(LD)Maxime/LVL
 MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Ingredients/Mats
+ContentBrowserTab1.SelectedPaths=/Game/PolygonPirates/Meshes/Props
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -153,7 +155,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.230000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -1023,8 +1025,8 @@ AnimationEditor.TimeStamp=2020.10.26-16.11.47
 AnimationEditor.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2020.10.26-16.11.53
 SequencerWidgets.LastCompileMethod=Unknown
-StaticMeshEditor.TimeStamp=2020.10.26-15.06.54
-StaticMeshEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2020.10.26-19.35.40
+StaticMeshEditor.LastCompileMethod=External
 PortalProxies.TimeStamp=2020.10.26-15.06.51
 PortalProxies.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2020.10.26-15.06.55
@@ -1174,28 +1176,30 @@ CameraActor=CameraActor.PostProcess.Lens,
 StaticMesh=
 WaterPaymentZone_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 USnapSystemSettings=InputSettings.Bindings.AxisMappings,
+KillerRake_C=
+SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem1=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem2=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem3=/Game/Ingredients/Ingredients/Coin
-MRUItem4=/Game/(PRG)Everyone/Spawners
-MRUItem5=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem6=/Game/(LD)Gaetan/LevelGaetan
-MRUItem7=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem8=/Game/(PRG)Everyone/WaterPaymentZone
-MRUItem9=/Game/(PRG)Everyone/WaterTower
-MRUItem10=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem11=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem12=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
-MRUItem13=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
-MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem16=/Game/(PRG)Jonathan/LvlTest
-MRUItem17=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
-MRUItem18=/Game/(ND)Yohan/LevelYohan
-MRUItem19=/Game/(LD)Maxime/LevelMax
+MRUItem0=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem1=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem2=/Game/(PRG)Everyone/KillerRake
+MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem4=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem5=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem6=/Game/Ingredients/Mats/GoldenEmissive
+MRUItem7=/Game/Ingredients/Ingredients/Coin
+MRUItem8=/Game/(PRG)Everyone/Spawners
+MRUItem9=/Game/(LD)Gaetan/LevelGaetan
+MRUItem10=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem11=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem12=/Game/(PRG)Everyone/WaterTower
+MRUItem13=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem14=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem15=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
+MRUItem16=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
+MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem19=/Game/(PRG)Jonathan/LvlTest
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -2342,6 +2346,32 @@ SpotLight.RayTracing=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+KillerRake_C.Tick=True
+KillerRake_C.Default=True
+KillerRake_C.Replication=True
+KillerRake_C.Rendering=True
+KillerRake_C.Collision=True
+KillerRake_C.Actor=True
+KillerRake_C.Input=True
+Ground_Spikes1_C.Tick=True
+Ground_Spikes1_C.Default=True
+Ground_Spikes1_C.Replication=True
+Ground_Spikes1_C.Rendering=True
+Ground_Spikes1_C.Collision=True
+Ground_Spikes1_C.Actor=True
+Ground_Spikes1_C.Input=True
+PrimitiveComponent.TransformCommon=True
+PrimitiveComponent.Materials=True
+PrimitiveComponent.Physics=True
+PrimitiveComponent.Rendering=True
+PrimitiveComponent.Collision=True
+PrimitiveComponent.Navigation=True
+PrimitiveComponent.Tags=True
+PrimitiveComponent.ComponentReplication=True
+PrimitiveComponent.Variable=True
+PrimitiveComponent.Cooking=True
+KillerRake_C.TransformCommon=True
+Ground_Spikes1_C.TransformCommon=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2391,8 +2421,13 @@ bHideUnrelatedNodes=False
 /Game/Ingredients/Mats/GoldenEmissive.GoldenEmissive=1
 /Game/Ingredients/Ingredients/Coin.Coin=1
 /Game/Ingredients/Mats/LightShaftMaterial.LightShaftMaterial=1
+/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01.SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Skeleton_Ground_02.SM_Prop_Skeleton_Ground_02;
+RecentlyPlaced=/Game/(PRG)Everyone/KillerRake.KillerRake;
+RecentlyPlaced=/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1;
+RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Scrub_Mop_01.SM_Prop_Scrub_Mop_01;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_Wake.P_FX_Wake;
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_Rain_Splash.P_FX_Rain_Splash;
@@ -2409,10 +2444,6 @@ RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_03.SM_E
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_02.SM_Env_Rock_Huge_02;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_01.SM_Env_Rock_Huge_01;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Arch_01.SM_Env_Rock_Arch_01;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_02.SM_Env_Rock_02;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_03.SM_Env_Rock_03;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Game/(PRG)Everyone/Art/LitLanterns.LitLanterns;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2591,7 +2622,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2609,9 +2640,9 @@ AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automa
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent=
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2652,6 +2683,7 @@ ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.
 ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+KillerRake_C=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2681,6 +2713,7 @@ DirectionalLight.LightShafts=False
 Emitter.Particles=True
 SpotLight.DistanceFieldShadows=True
 SkeletalMeshActor.Animation=True
+StaticMesh.LODCustomMode=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
