[TD] Timer and Game OVer Intergration

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,13 +73,11 @@ MultipleInstancePositions=(X=-8,Y=-8)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
-LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/(PRG)Everyone/KillerRake.KillerRake
-OpenAssetsAtExit=/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -137,7 +135,7 @@ MRUItem7=/Game/(LD)Maxime/LVL
 MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/PolygonPirates/Meshes/Props
+ContentBrowserTab1.SelectedPaths=/Game/(PRG)Everyone
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
