[TD] FIX: Killer Rake only launches once
Issue with the Event Tick which would Launch a character for each frame drawn. Should be fixed now.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,11 +69,11 @@ LastExecutedLaunchName=DESKTOP-K5HTRQ0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=-8,Y=-8)
+MultipleInstancePositions=(X=320,Y=160)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/(LD)Gaetan/RumOnTheRocks
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -122,20 +122,21 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 SnapScaleEnabled=False
 CurrentPosGridSize=4
+CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
 MRUItem1=/Game/(LD)Gaetan/LevelGaetan
-MRUItem2=/Game/(PRG)Jonathan/LvlTest
-MRUItem3=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
-MRUItem4=/Game/(ND)Yohan/LevelYohan
-MRUItem5=/Game/(LD)Maxime/LevelMax
-MRUItem6=/Game/(LD)Maxime/LevelGaetan
-MRUItem7=/Game/(LD)Maxime/LVL
-MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/(LD)Maxime/LevelMax
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/(PRG)Jonathan/LvlTest
+MRUItem5=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
+MRUItem6=/Game/(ND)Yohan/LevelYohan
+MRUItem7=/Game/(LD)Maxime/LevelGaetan
+MRUItem8=/Game/(LD)Maxime/LVL
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/(PRG)Everyone
+ContentBrowserTab1.SelectedPaths=/Game/(LD)Gaetan
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -1167,7 +1168,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.File Path,
 MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-ThirdPersonGameMode_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+ThirdPersonGameMode_C=
 Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 CameraActor=CameraActor.PostProcess.Lens,
@@ -1178,26 +1179,26 @@ KillerRake_C=
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
-MRUItem1=/Game/(PRG)Everyone/Ground_Spikes1
-MRUItem2=/Game/(PRG)Everyone/KillerRake
-MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem4=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem5=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem6=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem7=/Game/Ingredients/Ingredients/Coin
-MRUItem8=/Game/(PRG)Everyone/Spawners
-MRUItem9=/Game/(LD)Gaetan/LevelGaetan
-MRUItem10=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem11=/Game/(PRG)Everyone/WaterPaymentZone
-MRUItem12=/Game/(PRG)Everyone/WaterTower
-MRUItem13=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem14=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem15=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
-MRUItem16=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
-MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem19=/Game/(PRG)Jonathan/LvlTest
+MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem1=/Game/(LD)Gaetan/LevelGaetan
+MRUItem2=/Game/(LD)Maxime/LevelMax
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem5=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem6=/Game/(PRG)Everyone/KillerRake
+MRUItem7=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem8=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem9=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem10=/Game/Ingredients/Mats/GoldenEmissive
+MRUItem11=/Game/Ingredients/Ingredients/Coin
+MRUItem12=/Game/(PRG)Everyone/Spawners
+MRUItem13=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem14=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem15=/Game/(PRG)Everyone/WaterTower
+MRUItem16=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem17=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
+MRUItem19=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -2420,6 +2421,8 @@ bHideUnrelatedNodes=False
 /Game/Ingredients/Ingredients/Coin.Coin=1
 /Game/Ingredients/Mats/LightShaftMaterial.LightShaftMaterial=1
 /Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01.SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01=1
+/Game/(PRG)Everyone/KillerRake.KillerRake=1
+/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Skeleton_Ground_02.SM_Prop_Skeleton_Ground_02;
@@ -2620,7 +2623,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
