[LD] Rum on the Rocks w/ Deadly Traps
Still missing Patron Logic and corrected "Buckets"

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -121,22 +121,23 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_Lit,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=0,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=1,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=0,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=0,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=1,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=0,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 GridEnabled=False
 SnapScaleEnabled=False
-CurrentPosGridSize=4
+CurrentPosGridSize=3
 CurrentRotGridSize=0
+RotGridEnabled=False
 
 [MRU]
 MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem1=/Game/(LD)Gaetan/LevelGaetan
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/(LD)Maxime/LevelMax
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/(PRG)Jonathan/LvlTest
-MRUItem5=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
-MRUItem6=/Game/(ND)Yohan/LevelYohan
-MRUItem7=/Game/(LD)Maxime/LevelGaetan
-MRUItem8=/Game/(LD)Maxime/LVL
+MRUItem3=/Game/(LD)Maxime/LVL
+MRUItem4=/Game/(LD)Gaetan/LevelGaetan
+MRUItem5=/Game/(PRG)Jonathan/LvlTest
+MRUItem6=/Game/(LD)Gaetan/LevelGaetan_2_Hexa
+MRUItem7=/Game/(ND)Yohan/LevelYohan
+MRUItem8=/Game/(LD)Maxime/LevelGaetan
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/(LD)Gaetan
+ContentBrowserTab1.SelectedPaths=/Game/(PRG)Everyone
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.167636
@@ -1167,9 +1168,9 @@ UdpMessagingSettings=InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.File Path,
-MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+MonSuperSeau_C=
 ThirdPersonGameMode_C=
-Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 CameraActor=CameraActor.PostProcess.Lens,
 StaticMesh=
@@ -1177,28 +1178,29 @@ WaterPaymentZone_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Col
 USnapSystemSettings=InputSettings.Bindings.AxisMappings,
 KillerRake_C=
 SceneComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+RumOnTheRocks_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks
-MRUItem1=/Game/(LD)Gaetan/LevelGaetan
-MRUItem2=/Game/(LD)Maxime/LevelMax
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem4=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem5=/Game/(PRG)Everyone/Ground_Spikes1
-MRUItem6=/Game/(PRG)Everyone/KillerRake
-MRUItem7=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
-MRUItem8=/Game/Ingredients/Mats/LightShaftMaterial
-MRUItem9=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
-MRUItem10=/Game/Ingredients/Mats/GoldenEmissive
-MRUItem11=/Game/Ingredients/Ingredients/Coin
-MRUItem12=/Game/(PRG)Everyone/Spawners
-MRUItem13=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem14=/Game/(PRG)Everyone/WaterPaymentZone
-MRUItem15=/Game/(PRG)Everyone/WaterTower
-MRUItem16=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem17=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
-MRUItem19=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem0=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem1=/Game/(PRG)Everyone/KillerRake
+MRUItem2=/Game/(LD)Gaetan/RumOnTheRocks
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/(PRG)Everyone/Spawners
+MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem6=/Game/(LD)Maxime/LevelMax
+MRUItem7=/Game/(LD)Maxime/LVL
+MRUItem8=/Game/(LD)Gaetan/LevelGaetan
+MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem10=/Game/(PRG)Everyone/Ground_Spikes1
+MRUItem11=/Game/Dungeon_Assets/Fbx/SD_Prop_Tool_Hook_01_SD_Prop_Tool_Hook_01
+MRUItem12=/Game/Ingredients/Mats/LightShaftMaterial
+MRUItem13=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire
+MRUItem14=/Game/Ingredients/Mats/GoldenEmissive
+MRUItem15=/Game/Ingredients/Ingredients/Coin
+MRUItem16=/Game/(PRG)Everyone/WaterPaymentZone
+MRUItem17=/Game/(PRG)Everyone/WaterTower
+MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem19=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -2425,26 +2427,26 @@ bHideUnrelatedNodes=False
 /Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1=1
 
 [PlacementMode]
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Skeleton_Ground_02.SM_Prop_Skeleton_Ground_02;
 RecentlyPlaced=/Game/(PRG)Everyone/KillerRake.KillerRake;
 RecentlyPlaced=/Game/(PRG)Everyone/Ground_Spikes1.Ground_Spikes1;
+RecentlyPlaced=/Game/(PRG)Everyone/Art/LitLanterns.LitLanterns;
+RecentlyPlaced=/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau;
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/(PRG)Everyone/WaterTower.WaterTower;
+RecentlyPlaced=/Game/Dungeon_Assets/Fbx/SD_Trap_SwingingAxe_01_SwingingAxe.SD_Trap_SwingingAxe_01_SwingingAxe;
+RecentlyPlaced=/Game/Dungeon_Assets/Fbx/SD_Trap_FloorGrinder_01_Grinder_01.SD_Trap_FloorGrinder_01_Grinder_01;
+RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Skeleton_Ground_02.SM_Prop_Skeleton_Ground_02;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Scrub_Mop_01.SM_Prop_Scrub_Mop_01;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_Wake.P_FX_Wake;
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_Rain_Splash.P_FX_Rain_Splash;
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire.P_FX_MusketFire;
 RecentlyPlaced=/Game/PolygonPirates/ParticleFX/P_FX_Bonfire.P_FX_Bonfire;
-RecentlyPlaced=/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau;
 RecentlyPlaced=/Game/(PRG)Everyone/Art/LitBottleCandle.LitBottleCandle;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_01.SM_Env_Rock_01;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Ships/SM_Veh_Extra_Barrels_Group_01.SM_Veh_Extra_Barrels_Group_01;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Large_06.SM_Env_Rock_Large_06;
 RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Large_03.SM_Env_Rock_Large_03;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Large_01.SM_Env_Rock_Large_01;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_03.SM_Env_Rock_Huge_03;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_02.SM_Env_Rock_Huge_02;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Huge_01.SM_Env_Rock_Huge_01;
-RecentlyPlaced=/Game/PolygonPirates/Meshes/Environments/SM_Env_Rock_Arch_01.SM_Env_Rock_Arch_01;
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2649,10 +2651,10 @@ ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume=
-Brush=
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[33]\" \"Object.Console.ConsoleKeys\" "
-StaticMeshActor=
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -2685,6 +2687,8 @@ ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius\" \"Object.
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 KillerRake_C=
+RumOnTheRocks_C=
+LevelScriptActor=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
